--- a/README
+++ b/README
@@ -1,11 +1,11 @@
-Набор шаблонов для ускоренного создания сайтов.
+п»їРќР°Р±РѕСЂ С€Р°Р±Р»РѕРЅРѕРІ РґР»СЏ СѓСЃРєРѕСЂРµРЅРЅРѕРіРѕ СЃРѕР·РґР°РЅРёСЏ СЃР°Р№С‚РѕРІ.
 
-Пример шаблонов:
-	- Заготовка страницы XHTML1.1, возможно HTML5
-	- Заготовка для написания плагина jQuery с нуля
-	- CSS cтили(CSSkit.css) для форм, сгенерированных Django
-	- Стили и Яваскрипт для попапа
-	- Стили для пагинатора, breadcrumb(хлебных крошек)
-	- Ротатор, ротатор-лайт(для мобильных устройств)
-	- Заготовка сайта на Django с настроенным скриптом html5boilerplate
-	- Простенький сайт с css, написанным на LESS, SASS и т.п.
+РџСЂРёРјРµСЂ С€Р°Р±Р»РѕРЅРѕРІ:
+	- Р—Р°РіРѕС‚РѕРІРєР° СЃС‚СЂР°РЅРёС†С‹ XHTML1.1, РІРѕР·РјРѕР¶РЅРѕ HTML5
+	- Р—Р°РіРѕС‚РѕРІРєР° РґР»СЏ РЅР°РїРёСЃР°РЅРёСЏ РїР»Р°РіРёРЅР° jQuery СЃ РЅСѓР»СЏ
+	- CSS cС‚РёР»Рё(CSSkit.css) РґР»СЏ С„РѕСЂРј, СЃРіРµРЅРµСЂРёСЂРѕРІР°РЅРЅС‹С… Django
+	- РЎС‚РёР»Рё Рё РЇРІР°СЃРєСЂРёРїС‚ РґР»СЏ РїРѕРїР°РїР°
+	- РЎС‚РёР»Рё РґР»СЏ РїР°РіРёРЅР°С‚РѕСЂР°, breadcrumb(С…Р»РµР±РЅС‹С… РєСЂРѕС€РµРє)
+	- Р РѕС‚Р°С‚РѕСЂ, СЂРѕС‚Р°С‚РѕСЂ-Р»Р°Р№С‚(РґР»СЏ РјРѕР±РёР»СЊРЅС‹С… СѓСЃС‚СЂРѕР№СЃС‚РІ)
+	- Р—Р°РіРѕС‚РѕРІРєР° СЃР°Р№С‚Р° РЅР° Django СЃ РЅР°СЃС‚СЂРѕРµРЅРЅС‹Рј СЃРєСЂРёРїС‚РѕРј html5boilerplate
+	- РџСЂРѕСЃС‚РµРЅСЊРєРёР№ СЃР°Р№С‚ СЃ css, РЅР°РїРёСЃР°РЅРЅС‹Рј РЅР° LESS, SASS Рё С‚.Рї.
